--- a/assets/scss/utils/_cartes-restaurants.scss
+++ b/assets/scss/utils/_cartes-restaurants.scss
@@ -74,6 +74,7 @@
 }
 
 .style-trait-menu-enchante {
+    width: 100%;
     fill: $brown;
 }
 
@@ -135,6 +136,7 @@
 }
 
 .trait-menu-note {
+    width: 100%;
     fill: $brown;
 }
 
@@ -242,30 +244,37 @@
 }
 
 .trait-menu-chic-entrance {
+    width: 100%;
     fill: $orange-chic;
 }
 
 .trait-menu-chic-main {
+    width: 100%;
     fill: $mauve-chic;
 }
 
 .trait-menu-chic-dessert {
+    width: 100%;
     fill: $violet-chic;
 }
 
 .trait-effet-mirror {
+    width: 100%;
     transform: scale(-1,1); 
 }
 
 .trait-menu-delice-entrance {
+    width: 100%;
     fill: $bleu-electrique-delice;
 }
 
 .trait-menu-delice-main {
+    width: 100%;
     fill: $bleu-ocean-delice;
 }
 
 .trait-menu-delice-dessert {
+    width: 100%;
     fill: $bleu-clair-delice;
 }
 
@@ -295,6 +304,7 @@
 }
 
 .trait-menu-palette {
+    width: 100%;
     fill: $orange-chic;
 }
 
@@ -302,12 +312,16 @@
     fill: url(linearGradient.svg#degrade)
 }
 
+.trait-palette {
+    width: 100%;
+}
+
 svg.trait-palette stop:nth-child(1) {
     stop-color: #42973c;
   }
 
 svg.trait-palette stop:nth-child(2) {
-stop-color: #bfff7e;
+    stop-color: #bfff7e;
 }
 
 .style-titre-carte-palette {
